[workspace]
members = [
    "crates/*",
    "examples/*",
    "testing/bevy_example/",
]
resolver = "2"

[workspace.dependencies]
blenvy = { path = "crates/blenvy" }

bevy-inspector-egui = "0.31"
bevy = { version = "0.16", default-features = false }
bevy_common_assets = "0.13"
avian3d = "0.3"

ron = "0.10.1"
serde_json = "1.0.108"
serde = "1.0.193"
rand = "0.9.1"
tracing = "0.1.41"

[workspace.lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"

#### --------------------Dev/ debug-------------------------------
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

#### --------------------Production/ release-------------------------------
[profile.release]
strip = "debuginfo"
lto = "thin"
