[package]
name = "blenvy"
version = "0.1.0-alpha.2"
authors = ["Mark 'kaosat-dev' Moissette"]
description = "Allows you to define Bevy components direclty inside gltf files and instanciate the components on the Bevy side."
homepage = "https://github.com/kaosat-dev/Blenvy"
repository = "https://github.com/kaosat-dev/Blenvy"
keywords = ["gamedev", "bevy", "assets", "gltf", "components"]
categories = ["game-development"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
bevy = { workspace = true, default-features = false, features = [
    "bevy_asset",
    "bevy_scene",
    "bevy_gltf",
    "animation",
] }
serde.workspace = true
ron.workspace = true
serde_json.workspace = true
bevy_common_assets = { workspace = true, features = ["ron"] }
hashbrown.workspace = true


[dev-dependencies]
bevy = { workspace = true, default-features = false, features = [
    "dynamic_linking",
] }
