[package]
name = "bevy_gltf_save_load_basic_example"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = []
bevy-inspector = ["bevy-inspector-egui"]

[dependencies]
bevy = { workspace = true,default-features = true, features = ["dynamic_linking"] }
blenvy.workspace = true

serde_json.workspace = true
serde.workspace = true
rand.workspace = true

bevy-inspector-egui = { workspace = true, optional = true}

[dev-dependencies]
#bevy-inspector-egui = { version = "0.25.1"}