[package]
name = "bevy_example"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { workspace = true, features = ["dynamic_linking"] }
blenvy.workspace = true
#bevy_editor_pls = { version = "0.8" }
rand.workspace = true
json-writer ="0.4"

[dev-dependencies]
#bevy-inspector-egui = { version = "0.25.1"}